--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.DS_Store
 *.rbc
 *.sassc
 .sass-cache
@@ -14,4 +15,4 @@ capybara-*.html
 **.orig
 rerun.txt
 pickle-email-*.html
-.DS_Store
+database.yml
