added devise and prepped for heroku

--- a/test/fixtures/courses.yml
+++ b/test/fixtures/courses.yml
@@ -2,16 +2,10 @@
 
 one:
   title: MyString
-  password: MyString
-  firstName: MyString
-  lastName: MyString
-  start: 2012-06-29
-  end: 2012-06-29
+  number: MyString
+  section: MyString
 
 two:
   title: MyString
-  password: MyString
-  firstName: MyString
-  lastName: MyString
-  start: 2012-06-29
-  end: 2012-06-29
+  number: MyString
+  section: MyString
