--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ capybara-*.html
 /tmp/*
 /db/*.sqlite3
 /public/system/*
-/public/uploads/item/*
+/public/uploads/item/filename/*
 /coverage/
 /spec/tmp/*
 **.orig
