Analogy/Prediction do stuff now

--- a/db/fixtures/items.yml
+++ b/db/fixtures/items.yml
@@ -20,7 +20,7 @@ Moon:
   diameter: 3.474800e6
   surface_area: 3.7932328100000e13
   volume: 2.19678756e19
-  person_id: 1
+  person_id: 4
 
 Basketball:
   name: "basketball"
@@ -28,7 +28,7 @@ Basketball:
   diameter: 0.238732415
   surface_area: 1.79049312e-1
   volume: 7.12414576e-3
-  person_id: 1
+  person_id: 4
 
 Baseball:
   name: "baseball"
@@ -36,7 +36,7 @@ Baseball:
   diameter: 7.5e-2
   surface_area: 1.76714587e-2
   volume: 2.20893233e-4
-  person_id: 1
+  person_id: 4
 
 Golfball:
   name: "golf ball"
@@ -44,7 +44,7 @@ Golfball:
   diameter: 4.3e-2
   surface_area: 5.80880482e-3
   volume: 4.16297679e-5
-  person_id: 2
+  person_id: 4
 
 Tennisball:
   name: "tennis ball"
@@ -52,7 +52,7 @@ Tennisball:
   diameter: 6.7e-2
   surface_area: 1.41026094e-2
   volume: 1.57479139e-4
-  person_id: 3
+  person_id: 4
 
 House:
   name: "house"
@@ -104,3 +104,16 @@ Richmond:
   area: 155600000
   person_id: 4
 
+WhiteBloodCell:
+  name: "White Blood Cell"
+  article: "a"
+  diameter: .00001
+  volume: 5.2359878e-16
+  person_id: 4
+
+Pea:
+  name: "Pea"
+  article: "a"
+  diameter: .0064
+  volume: 1.37258277e-7
+  person_id: 4
